# tt_to_tg_bot_rust

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  utils.rs
src/bot/: handlers.rs
src/tiktok/: downloader.rs
