[package]
name = "tt_to_tg_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "rustls", "ctrlc_handler"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
regex = "1"

[profile.release]
opt-level = 2
codegen-units = 4
lto = "thin"
strip = true

[profile.dist]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
inherits = "release"
